# nerdfont-fetcher

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nerdfont_fetcher/: cli.py  data_source.py  font_service.py
tests/: conftest.py  test_cli.py
tests/resources/: mock_github_response.json  mock_latest_response.json
